fixed the postion of the scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .layout{
     max-width: 100vw;
-    min-height: max-content;
+    margin:0;
+    min-height:85vh;
     padding: 24px;
     display:flex;
     gap:16px;
     align-items: flex-start;
-    overflow-x: hidden;
+    overflow-x: auto;
     scrollbar-base-color: red !important;
     scrollbar-3dlight-color: red !important;
     scrollbar-arrow-color: red !important;
@@ -13,7 +14,7 @@
 
 ::-webkit-scrollbar{
     color:red;
-    height: 25px;
+    height: 18px;
     width: 15px;
     /*todo:choose some colors*/
 }
